--- a/public/style.css
+++ b/public/style.css
@@ -4,11 +4,17 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: "CronosProDisplay";
+  src: url("../fonts/CronosPro-Disp.ttf") format("truetype");
+}
+
 body {
   cursor: url("../cursors/cursor-normal.png"), default !important;
   background-color: rgb(60, 63, 82);
-  background: url("../images/background-highres.jpg") top/cover no-repeat fixed,
-    url("../images/background-lowres.jpg") top/cover no-repeat fixed;
+  background: url("../images/background-highres.jpg") top/cover no-repeat fixed, url("../images/background-lowres.jpg") top/cover no-repeat fixed;
+  font-family: "CronosProDisplay", sans-serif;
+  letter-spacing: 1px;
 }
 
 button,
@@ -18,4 +24,38 @@ a {
 
 input {
   cursor: url("../cursors/cursor-text.png"), text !important;
+}
+
+.chat-height {
+  height: 72vh;
+}
+
+.chat-messages {
+  height: 61vh;
+}
+
+.chat-message {
+  font-size: 1rem;
+  padding: 8px 0;
+  line-height: 1.3;
+  word-wrap: break-word;
+}
+
+input,
+select {
+  outline: none;
+}
+
+::-webkit-scrollbar {
+  width: 9px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #285e61;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1e4346;
+  border-radius: 5px;
 }
