--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,7 @@ body {
 button,
 a {
   cursor: url("../cursors/cursor-pointer.png"), pointer !important;
+  outline:none !important;
 }
 
 input {
